Development
	Subtitles should now work now, set them with either 
		--subtitle on the command line 
		or by right clicking on the playlist panel and adding a subtitle to an item on the playlist
	Add view menu options for changing the aspect ratio of the media
	GUI for setting subtitles, but it doesn't actually use the subtitle yet
	Fix all kinds GTK warnings when a bad commandline option is issued
	Make mouse disappear when panel disappears
	Make control panel disappear in FS mode after 5 seconds of no mouse movement
	More shortcuts
	Some GUI Polish
	On Popup->Save As, set default filename to filename from URL
	Rework how next file is launched,may help CPU usage issues
	Only update guistate when it has changed
	Try and fix problem with BBC site
	Set alignment of length in playlist to be right aligned
	When loading a dvd w/menus get the dvd title and put it in the playlist
	When loading a dvd get the track length
	In metadata capture, use name and author in addition to Title and Artist
	Add tvfps option (needed for some webcams)
		my pwc webcam works best with --tvdriver=v4l --tvfps=30
	Add support for tv:// type devices
	Update playlist viewer to show metadata (if present) from the files.
	Add open location to the file menu
	Improved RealPlayer emulation, the BBC News site works better now
	Fix remote volume setting, when running in GTK >= 2.12 mode
0.5.3
	Fix bug in set_media_info calls, where wrong variable being sent
	Polish and Korean Translations
	Acclerator I (show/hide info window)
	Accelerators Ctrl-P (Preferences) and Ctrl-L (Playlist)
	Hide Playlist when fullscreen is selected
	Change Properties to Preferences
	Removal of dependancies on libgnome and libgnomeui
	Key j selects visible subtitle
	Key v toggles subtitle visibility
	When using dvdnav:// prev and next should do chapter seeks
	Added pt_BR translation
	On file open if file does not exi
	When SetURL is passed in, set the media file in title bar to the URL
	Fix mplayer not being shutdown on F8